# bamboo

./: Cargo.toml
src/: main.rs
src/media/: identifier.rs  mod.rs  person.rs  role.rs  title.rs
src/media_type/: mod.rs
src/music/: mod.rs  role.rs
src/music/entities/: identifier.rs  identifiers.rs  mod.rs  recording.rs  work.rs
src/music/media/: mod.rs  song.rs
src/tags/: mod.rs
