[package]
name = "bamboo"
version = "0.1.0"
authors = ["Nick Zana <me@nickzana.dev>"]
edition = "2018"

[dependencies]
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", default-features = false, features = ["json"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"]}
chrono = { version = "0.4.0", features = ["serde"]}
Inflector = "0.11"
iso639_enum = "0.1"

[features]
music = []
